--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200;400;500;600;700&display=swap');
 
 body {
   font-family: 'Barlow', sans-serif;
-  font-size: 1.5rem;
 }
