--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,3 +3,12 @@
 body {
   font-family: 'Barlow', sans-serif;
 }
+
+@media screen and (max-width: 760px) {
+  h1, h2 {
+    font-size: 2.25rem;
+  }
+  p {
+    font-size: 1.2rem;
+  }
+}
