--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,31 @@ body {
 
 /* UTILITY CLASSES */
 
+.slice {
+  position: relative;
+  
+  background: var(--light);
+  color: var(--charcoal);
+}
+
+.slice:nth-of-type(even) {
+  background: var(--lt-green);
+  color: #fff;
+}
+
+.container {
+  width: 100%;
+  max-width: 75rem;
+
+  margin-inline: auto;
+  padding: 3rem 1rem;
+
+  line-height: 1.5;
+  font-size: 1rem;
+}
+
+/* Elements */
+
 .btn {
   display: inline-block;
   font-size: 1.125rem;
@@ -35,15 +60,32 @@ body {
   background: transparent;
   font-weight: 200;
 
-  border: 1px solid #333;
+  border: 1px solid #555;
 }
 
-.margin-top {
+.mt-3 {
   margin-top: 1.5rem ;
 }
+.pr-2 {
+  padding-right: 1rem;
+}
+.pl-4 {
+  padding-left: 2rem ;
+}
 
-p {
-  margin-bottom: 0.75rem;
+/* Text */
+
+.h1 {
+  margin-bottom: 1.5rem;
+  text-transform: uppercase;
+  font-size: 3rem;
+  font-weight: 700;
+}
+.h2 {
+  margin-bottom: 1.5rem;
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 /* Flexbox */
