--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,7 +128,7 @@ body {
     
     margin: 0 0 .75rem;
     padding: .75rem 1.25rem .75rem 1.1875rem;
-    border-left: 4px solid #ccc;
+    border-left: 4px solid var(--light);
     
     quotes: "“" "”" "‘" "’";
   }
@@ -137,7 +137,7 @@ body {
   blockquote > p::before {
     font-family: Georgia, serif;
     font-size: 4em;    
-    color: #ccc;
+    color: var(--light);
     line-height: 0.1em;
   }
   
@@ -159,5 +159,5 @@ body {
   }
   blockquote > cite {
     font-size: 1.25rem;
-    color: #a0a0a0;    
+    color: var(--light);
   }
