--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,11 @@ body {
   padding: 0.5rem 1rem 0.5635rem;
 }
 
+.btn-primary {
+  background: var(--primary);
+  color: white;
+}
+
 .btn-outline-white {
   background: transparent;
   color: #fff;
